plugins {
    id 'base'
    id 'jacoco'
}

allprojects {
    group = 'com.senthora.gatlingfx'
    version = '0.1.0'

    repositories {
        mavenCentral()
    }
}

def libraryProjects = subprojects.findAll {
    it.name != 'launcher'
}

configure(libraryProjects) {
    apply plugin: 'java-library'
    apply plugin: 'jacoco'

    base {
        archivesName = "${rootProject.name}-${project.name}"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    jacoco {
        toolVersion = '0.8.14'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()

        if (name == "integrationTest") {
            outputs.upToDateWhen { false }
            shouldRunAfter(tasks.test)
            systemProperty(
                    "gatlingfx.logs.directory",
                    rootProject.file("build/gatlingfx").absolutePath
            )
            jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
        }
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
        }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }

    tasks.jacocoTestReport {
        dependsOn tasks.test

        reports {
            xml.required = true
            html.required = true
        }
    }

    if (sourceSets.findByName('integrationTest') != null) {
        configurations {
            integrationTestRuntimeElements {
                canBeConsumed = true
                canBeResolved = false

                extendsFrom integrationTestRuntimeClasspath

                outgoing.capability(
                        "${project.group}:${project.name}-integration-tests:${project.version}"
                )
            }
        }
        tasks.register('integrationTestJar', Jar) {
            archiveClassifier = 'integration-test'

            from sourceSets.integrationTest.output
        }
        artifacts {
            integrationTestRuntimeElements integrationTestJar
        }
    }
}

tasks.register('jacocoTestReport', JacocoReport) {
    dependsOn subprojects.collectMany { project ->
        project.tasks.matching {
            it.name in ['test', 'integrationTest']
        }
    }
    dependsOn subprojects.collect { it.tasks.named('jacocoTestReport') }

    additionalSourceDirs.from files(subprojects.sourceSets.main.allSource.srcDirs)
    sourceDirectories.from files(subprojects.sourceSets.main.allSource.srcDirs)
    classDirectories.from files(subprojects.sourceSets.main.output)

    executionData.from fileTree(layout.projectDirectory) {
        include '**/build/jacoco/*.exec'
    }
    reports {
        xml.required = true
        html.required = true

        xml.outputLocation = layout.buildDirectory.file(
                'reports/jacoco/jacocoRootReport.xml'
        )
        html.outputLocation = layout.buildDirectory.dir(
                'reports/jacoco/html'
        )
    }
}

tasks.named('clean') {
    delete layout.buildDirectory
}
